# thomascamminady.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  Makefile  README.md  index.html  mkdocs.yml  observablehq.config.js  package-lock.json  pyproject.toml  sitemap.xml  style.css
.archive/data/: palettes.json  running.parquet
.github/workflows/: ci.yml  deploy.yml  publish.yml
abiturnoten/: index.html
alltimeathletics/: index.html
archive/data/: runalyze-activities-2.csv  runalyze-activities.csv
archive/posts/: elections.md  logitech.md  polars-pandas.md  running-history.md  running.json  running.md
assets/: style.css
colors/: index.html
content/alltimeathletics/: index.html
content/cv/: cv.html
content/elections/: index.html
content/pipes/: index.html
content/projects/: projects.html
content/staustau/: script_map.js  staustau.html
content/whistle/: body_composition.html  index.html  weekly_milage.html
cv/: cv.html  index.html
docs/: abiturnoten.md  colors.md  cv.md  getting_married.md  index.md  projects.md  python.md  running.md
docs/data/: running.json
docs/posts/: polars-pandas.md  running.md
docs/stylesheets/: extra.css
elections/: elections.html
ideation/markov/: README.md  animation.js  index.html  script.js  styles.css
overrides/: main.html
projects/: index.html  projects.html
python/: index.html
running/: index.html
search/: search_index.json
src/: colors.md  custom-style.css  cv.md  index.md  projects.md  python.md
staustau/: script_chart.js  staustau.html
stylesheets/: extra.css
(+11 files in other folders)
